Questions Set Module

--- a/Questions/templates/question_sets/create_question_set.html
+++ b/Questions/templates/question_sets/create_question_set.html
@@ -11,15 +11,17 @@
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url "teacher-index-view" %}">Home</a></li>
-                    <li class="breadcrumb-item active">Create Questions Set</li>
+                    <li class="breadcrumb-item active">Create Question Set</li>
                 </ol>
             </nav>
         </div>
 
         <section class="section dashboard">
             <div class="row justify-content-center">
-                <div class="col-lg-6">
+                <div class="col-lg-8">
+
                     <div class="card border border-dark shadow">
+
                         <div class="card-header text-center bg-primary text-light fw-bold fs-5">
                             Create Question Set
                         </div>
@@ -41,24 +43,24 @@
                                     </select>
                                 </div>
 
-                                <div class="col-3">
+                                <div class="col-2">
                                     <label for="unit" class="form-label">Unit No</label>
                                     <input type="number" class="form-control" id="unit" placeholder="No." name="unit" min="1" required>
                                 </div>
 
-                                <div class="col-9">
+                                <div class="col-10">
                                     <label for="unitTitle" class="form-label">Unit Title</label>
                                     <input type="text" class="form-control" id="unitTitle" name="unit_title" required>
                                 </div>
 
-                                <div class="col-3">
+                                <div class="col-2">
                                     <label for="co" class="form-label">CO</label>
                                     <input type="number" class="form-control" id="co" placeholder="No." name="co" min="1" required>
                                 </div>
 
-                                <div class="col-9">
+                                <div class="col-10">
                                     <label for="coTitle" class="form-label">CO Title</label>
-                                    <input type="text" class="form-control" id="cocoTitle_title" name="co_title" required>
+                                    <input type="text" class="form-control" id="coTitle" name="co_title" required>
                                 </div>
 
                                 <div class=" col-12 text-center">
@@ -67,7 +69,9 @@
                             </form>
             
                         </div>
+
                     </div>
+                    
                 </div>
             </div>
         </section>
