--- a/Users/templates/members/teacher/profile.html
+++ b/Users/templates/members/teacher/profile.html
@@ -1,6 +1,6 @@
 {% extends "members/teacher/base_site.html" %}
 
-{% block title %} Profile {% endblock title %}
+{% block title %} Profile Details {% endblock title %}
 
 {% block main %}
     <main id="main" class="main">
@@ -10,7 +10,7 @@
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url "teacher-index-view" %}">Home</a></li>
-                    <li class="breadcrumb-item active">Profile</li>
+                    <li class="breadcrumb-item active">Profile Details</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
@@ -20,7 +20,7 @@
                 <div class="col-xl-8">
                     <div class="card border border-dark shadow">
                         <div class="card-header text-center bg-primary text-light fw-bold fs-5">
-                            {{request.user}}'s Profile
+                            {{request.user}}'s Profile Details
                         </div>
                         
                         <div class="card-body pt-3">
