Question Paper Module

--- a/Users/templates/members/teacher/base_site.html
+++ b/Users/templates/members/teacher/base_site.html
@@ -86,7 +86,7 @@
             <li class="nav-heading">QUESTION PAPER</li>
     
             <li class="nav-item">
-                <a class="nav-link collapsed" href="">
+                <a class="nav-link collapsed" href="{% url "create-question-paper-view" %}">
                     <i class="bi bi-file-earmark-plus"></i>
                     <span>Create Question Paper</span>
                 </a>
